Add tests and build scripts for Auxiliary Functions
- Created new test executable for Auxiliary Functions.
- Added CMake configuration for installing tests and their dependencies.
- Introduced build scripts for MSVC and MSYS2 environments.
- Included Catch2 testing framework via FetchContent.
- Updated auxiliary functions header to remove unnecessary type definitions.
- Adjusted basic types header for better compatibility with compilers.
- Added manifest files for the Auxiliary Functions test executable.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,5 +58,6 @@
     "copilot.vision.provider": "Gemini",
     "geminicodeassist.project": "firstproject-451013",
     "makefile.makePath": "c:\\msys64\\ucrt64\\bin\\mingw32-make.exe",
-    "makefile.buildLog": "/build"
+    "makefile.buildLog": "/build",
+    "C_Cpp.default.configurationProvider": "mesonbuild.mesonbuild"
 }
